crates/unsoundness_checker/tests/snapshots/type_checking_directive_used/markdown_test__snippet_03.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
error[type-checking-directive-used]: Type checking directive `ty: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> snippet_03.py:1:14
  |
1 | res = foo()  # ty: ignore
  |              ^^^^^^^^^^^^
2 |
3 | res = foo()  # ty: ignore[unresolved-reference]
  |
info: rule `type-checking-directive-used` was selected in the configuration file

error[type-checking-directive-used]: Type checking directive `ty: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> snippet_03.py:3:14
  |
1 | res = foo()  # ty: ignore
2 |
3 | res = foo()  # ty: ignore[unresolved-reference]
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file
